feat: 内置工具配置移至工具级别，支持按工具名命名空间隔离
- 删除废弃的 RoleController
- ConfigSchema 新增 toolName 字段关联具体工具
- McpToolItemVO 增加 configSchema（工具级），原 McpServer 级别移除
- 后端 findToolSchema 按 serverName + toolName 双重匹配
- ShellTools 配置读取支持命名空间格式（tool_name → {...}），兼容旧扁平格式
- 使用 Math.clamp() 替代 Math.max(Math.min())
- WebSearchTools 新增 engine 参数支持指定搜索引擎（DUCKDUCKGO/BING），失败自动降级
- 前端类型同步：configSchema 移至 McpToolItem，configCache 改为 serverId → toolName → field
- 前端保存时按 tool name namespace 写入 source_config
- AOT 反射注册新增 ConfigSchema、ConfigFieldDescriptor、McpToolItemVO